Patch JSON mapper

--- a/EJBank-web/pom.xml
+++ b/EJBank-web/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>jersey-json</artifactId>
             <version>${jersey.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.owlike</groupId>
+            <artifactId>genson</artifactId>
+            <version>1.6</version>
+        </dependency>
     </dependencies>
 
     <build>
