--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,9 @@
         <module>EJBank-web</module>
         <module>EJBank-ejb</module>
     </modules>
+    <properties>
+        <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties> 
 </project>
