--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,5 +23,7 @@ services:
         ports:
             - 8001:8181
             - 8002:4848
+        volumes:
+            - ./deployments:/opt/payara/appserver/glassfish/domains/production/autodeploy
 
 
